# consul

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
.github/workflows/: tests.yml
examples/2d/: 2d_camera.cpp  2d_rotate_camera.cpp  CMakeLists.txt
examples/2d_camera/: 2d_camera.cpp  CMakeLists.txt
shaders/: basic.fs  basic.vs  default_frag.glsl  default_fragment_2d.glsl  default_vert.glsl  default_vertex_2d.glsl
src/: app.cpp  app.hpp  event_handler.hpp  main.cpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  sprite.hpp  sprite_sheet.cpp  sprite_sheet.hpp  texture.cpp  texture_manager.cpp  texture_manager.hpp  utils.cpp  utils.hpp
src/core/: app.cpp  app.hpp  consul.cpp  consul.hpp  engine_context.hpp  keyboard.cpp  keyboard.hpp  mouse.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  time.cpp  time.hpp  window.cpp  window.hpp  window_config.hpp
src/core/camera/: camera.cpp  camera.hpp
src/core/console/: console.cpp  console.hpp
src/core/models/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
src/core/profiling/: event_queue.cpp  event_queue.hpp  profile_method.hpp  profiler.cpp  profiler.hpp  profiler_scope.hpp  scope.cpp  scope.hpp
src/core/ui/: console_window.cpp  console_window.hpp  fps_monitor.cpp  fps_monitor.hpp  performance_window.cpp  performance_window.hpp  ui_window.hpp  user_interface.cpp  user_interface.hpp
src/ecs/: app_manager.cpp  app_manager.hpp  component_manager.cpp  component_manager.hpp  ecs_types.hpp  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp
src/ecs/components/: collisions.hpp  physics_2d.hpp  player_controller.hpp  rectangle.hpp  tags.hpp  transform_2d.hpp
src/ecs/systems/: collisions.cpp  collisions.hpp  computer.cpp  computer.hpp  draw_system.cpp  draw_system.hpp  input_handler.cpp  input_handler.hpp  movement.cpp  movement.hpp  physics.cpp  physics.hpp  render_system.cpp  render_system.hpp
src/graphics/: colour.hpp  graphics.hpp  graphics_opengl.hpp  mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  renderable.hpp  renderer.hpp  shader.hpp  texture.hpp
src/graphics/camera/: camera.cpp  camera.hpp  camera_2d.cpp  camera_2d.hpp  camera_3d.cpp  camera_3d.hpp
src/graphics/geometry/: geometry.cpp  geometry.hpp  geometry_2d.cpp  geometry_2d.hpp  geometry_3d.cpp  geometry_3d.hpp
src/graphics/mesh/: mesh.cpp  mesh.hpp  mesh_data.hpp  renderable_mesh.hpp
src/graphics/mesh/opengl/: opengl_mesh.cpp  opengl_mesh.hpp
src/graphics/models/: mesh.cpp  model.cpp  model.hpp  model_data.cpp  model_data.hpp  texture.hpp
src/graphics/models/mesh/: mesh.hpp  mesh_data.hpp
src/graphics/models/mesh/opengl/: opengl_mesh.cpp  opengl_mesh.hpp
src/graphics/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
src/graphics/shader/: shader.cpp
src/graphics/shaders/: shader.hpp
src/graphics/shaders/opengl/: opengl_shader.cpp  opengl_shader.hpp
src/graphics/texture/: texture.cpp  texture.hpp
src/graphics/textures/: renderable_texture.hpp  texture.hpp  texture_data.hpp
src/graphics/textures/opengl/: opengl_texture.cpp  opengl_texture.hpp
src/input/: input_system.cpp  input_system.hpp  keyboard_state.hpp  mouse_state.hpp
src/maths/: constants.hpp  unit_conversions.hpp  vectors.hpp
src/utils/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_constants.cpp  test_input_system.cpp  test_keyboard_state.cpp  test_mouse_state.cpp  test_unit_conversions.cpp
